--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
           <div class="text-xs">Forks</div>
         </div>
         <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 mb-4 bg-gray-200 border">
-          <div class="text-2xl">{{ data?.license?.spdx_id }}</div>
+          <div class="text-2xl">{{ data?.license?.name }}</div>
           <div class="text-xs">License</div>
         </div>
       </div>
